Salesforce/src/objects/Employee__c.object
<CustomObject>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>CheckRollupsummary__c</fullName>
        <formula>If(Department__r.VALID_CHECKBOX__c,null, Tax_on_emp__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>CheckRollupsummary</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>DEP_PL__c</fullName>
        <label>DEP PL</label>
        <picklist>
            <picklistValues>
                <fullName>IT</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>HR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>ADMIN</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Department__c</fullName>
        <label>Department</label>
        <referenceTo>Department__c</referenceTo>
        <relationshipLabel>Employees</relationshipLabel>
        <relationshipName>Employees</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
        <writeRequiresMasterRead>true</writeRequiresMasterRead>
    </fields>
    <fields>
        <fullName>Empvin1__c</fullName>
        <label>Empvin1</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Salary__c</fullName>
        <label>Salary</label>
        <precision>18</precision>
        <scale>6</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Tax_on_emp__c</fullName>
        <formula>Salary__c  * 0.05</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tax on emp</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Employee</label>
    <listViews>
        <fullName>All</fullName>
        <columns>OBJECT_ID</columns>
        <columns>NAME</columns>
        <columns>Account__c</columns>
        <columns>Department__c</columns>
        <columns>Salary__c</columns>
        <columns>Tax_on_emp__c</columns>
        <columns>CREATEDBY_USER.ALIAS</columns>
        <columns>CREATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Employee Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Employees</pluralLabel>
    <recordTypes>
        <fullName>EMPRET1</fullName>
        <active>true</active>
        <label>EMPRET1</label>
    </recordTypes>
    <recordTypes>
        <fullName>EmpRE4</fullName>
        <active>true</active>
        <label>EmpRE4</label>
    </recordTypes>
    <recordTypes>
        <fullName>EmpRECORDTYPE</fullName>
        <active>true</active>
        <label>EmpRECORDTYPE</label>
    </recordTypes>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>DEP_PL_VALR</fullName>
        <active>false</active>
        <errorConditionFormula>OR(
AND(
TEXT( PRIORVALUE( DEP_PL__c ) ) =&quot;HR&quot; ,  
 
REGEX( TEXT( DEP_PL__c ),&quot;(?:IT|ADMIN)&quot; )

),
AND(
TEXT( PRIORVALUE( DEP_PL__c ) ) =&quot;IT&quot; ,  
 
REGEX( TEXT( DEP_PL__c ),&quot;(?:HR|ADMIN)&quot; )

))</errorConditionFormula>
        <errorDisplayField>DEP_PL__c</errorDisplayField>
        <errorMessage>YOU CAN NOT CHANGE THE DEPARTMENT VALUE FROM HR TO IT AND VICE VERSA</errorMessage>
    </validationRules>
</CustomObject>